update ION, do not use ServiceLoader, merge JDOM into util.jar
GitOrigin-RevId: d84e5831ca8db332a263f1fffff8bf43f69413f7